# modac-with-love-bug

./: .gitignore  ARCHITECTURE.md  README.md  create_map_image.py  game_qa_clone.py  pyproject.toml  requirements.txt  run_manager.bat
.claude/: settings.local.json
action_clone/: README.md  game_qa_clone.py
assets/: README.md  accomplish_snippet.json  controls.json  recording_schema.json  scenario_template.json  tdm_rules.json  transport_ship_2.json
auto_run_action/: README.md  __init__.py  keys.py  locator.py  navigator.py  position.py  recorder.py  runner.py  step.py  win_input.py
crossfire_qa/: .gitignore  PUBLIC_RELEASE_MANIFEST.md  README.md  auto_promote_assets.py  bootstrap.py  bootstrap_temporal_notifications.py  build_qa_review_package.py  build_qa_web_report.py  make_synthetic_dataset.py  prepare_assets.py  requirements-optional.txt  requirements.txt  run.py  sample_report.json
examples/: minerl_adapter_reference.py
image_analysis/: README.md  __init__.py  paddle_score_reader.py  requirements_paddle.txt  score_reader.py  test_score_reader.py
manager/: __main__.py  analysis_autorun.py  autorun_controller.py  capture_real.py  capture_stub.py  clock.py  config.py  frame.py  items.py  modules.py  play_real.py  play_stub.py  recorder_session.py  requirements.txt  runner.py  scenario.py  serializer.py  sources.py  streamer.py  transport.py
map_selector/: README.md  app.js  index.html  mapinfo.json  server.py  style.css
record_replay/: aim.py  auto_run.py  auto_run_optimized.py  hotkey_runner.py  main.py  radar.py  requirements.txt
samples/: README.md  make_samples.py  output_action.json  output_sequence_events.json
scripts/: make_full_map_outline.py  preview_synth.py  run_train.sh
test_auto_run_executor/: README.md  api.py  local_runner.py
test_scenario_executor/: README.md  __init__.py  api.py  input_logger.py  local_runner.py  player.py  screen_recorder.py
tests/: fakes.py  test_analysis_autorun.py  test_autorun_controller.py  test_capture_real.py  test_capture_real_next.py  test_clock.py  test_config.py  test_control_app.py  test_control_autorun.py  test_events.py  test_fakes.py  test_fixed_file_source.py  test_frame_bgr.py  test_items.py  test_module_interfaces.py  test_play_real.py  test_play_stub.py  test_policy.py  test_protocol.py  test_recorder_session.py  test_runner.py  test_scenario.py  test_screen_recorder_latest.py  test_serializer.py  test_smoke.py  test_streamer.py  test_websocket_transport.py
ui/: README.md  dashboard.html  (+5 more)
(+120 files in other folders)
