[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modac"
version = "0.1.0"
description = "Frame-to-action system: image in, FPS action out, over a framework-agnostic API."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "numpy>=1.24",
    "pillow>=10.0",
    "httpx>=0.27",
    "websockets>=12.0",
]

[project.optional-dependencies]
# Windows-only deps for the reference game adapter (screen capture + input injection).
# Install on the machine that actually runs CrossFire:  pip install "modac[windows]"
windows = [
    "dxcam>=0.0.5",
    "pydirectinput>=1.0.4",
    "mss>=9.0",
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
modac-server = "modac.server.run:main"
modac-agent = "modac.client.loop:main"

[tool.hatch.build.targets.wheel]
packages = ["src/modac"]
