[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modac"
version = "0.1.0"
description = "Frame-to-action system: image in, FPS action out, over a framework-agnostic API."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "numpy>=1.24",
    "pillow>=10.0",
    "opencv-python-headless>=4.8",
    "httpx>=0.27",
    "websockets>=12.0",
]

[project.optional-dependencies]
# Windows-only deps for the reference game adapter (screen capture + input injection).
# Install on the machine that actually runs CrossFire:  pip install "modac[windows]"
windows = [
    "dxcam>=0.0.5",
    "pydirectinput>=1.0.4",
    "mss>=9.0",
]
dev = [
    "pytest>=8.0",
]
# Training the learned minimap localizer (modac.localize_net). Heavy; install
# only on the box that trains the model:  pip install "modac[train]"
train = [
    "torch>=2.2",
    "torchvision>=0.17",
]
# Aim-bot perception (modac.aim): pretrained YOLO enemy detection + cyan IFF.
# Pulls torch via ultralytics.  NOTE: ultralytics is AGPL-3.0 — for closed/commercial
# use, get a commercial license or swap to a permissive detector (YOLOX, RT-DETR).
aim = [
    "ultralytics>=8.1",
]

[project.scripts]
modac-server = "modac.server.run:main"
modac-agent = "modac.client.loop:main"
modac-convert = "modac.events:main"
modac-loc-train = "modac.localize_net.train:main"

[tool.hatch.build.targets.wheel]
packages = ["src/modac"]
